--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,7 @@ body {
 }
 
 body {
-  /* background-color: hsl(253, 29%, 16%); */
-  background-color: blue;
+  background-color: hsl(253, 29%, 16%);
   color: white;
 }
 
